fixed icons and alignment for info-nav section. Inserted filler image.

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -65,3 +65,12 @@ footer {
         margin: 0 auto;
     }
 }
+
+/* font-awesome icon rendering */ 
+.icon::before {
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
